# AcusticAIApi

./: .env  .env.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.sh  debug.sh  dev.sh  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  down.sh  flake.nix  package-lock.json  package.json  prod.sh  rebuild.sh  result  results.txt  shell.nix
Article/: .gitignore  main.tex
Backend/: .gitignore  Dockerfile  Jenkinsfile  dockerfile.dev  jest.config.ts  main.ts  package-lock.json  package.json  setup.ts  tsconfig.json
Backend/carcountAI_api/: CMakeLists.txt  exec.sh  main.cc  model.cc
Docker/: docker-compose.dev.yml
Frontend/: dockerfile.prod  jest.config.ts  next-i18next.config.js  package-lock.json  package.json  tsconfig.json
Model/: main.py  requirements.txt  test_main.py
Querys/: trafficAI.gql
Schemas/: auth.proto  data.proto  noiseAI.gql  noiseAI.proto  trafficAI.gql
Website/: README.md  package.json
ai/: Dockerfile  README.md  analyse.py  docker.nix  main.py  requirements.txt  result  server.py
auth/: Dockerfile  package.json
backend/: .c8rc.json  .dockerignore  .env  Dockerfile  docker.nix  jest.config.ts  main.ts  package.json  result  secrets.ts  server.ts  tsconfig.json  vitest.config.ts
e2e/: main.js  package-lock.json  package.json  start.sh
frontend/: Dockerfile  dev.Dockerfile  docker.nix  jest.config.ts  next.config.js  nuxt.config.ts  package-lock.json  package.json  prod.Dockerfile  result  tsconfig.json
(+492 files in other folders)
